2010-06-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/posix.h: anticipate R 2.12.0 switch of classes
	POSIXt and POSIXct

	* inst/include/classic: New home for the 'classic' API headers. Also
	some refactoring of the internals so that they can interoperate
	better withuse the new API.

2010-06-24  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/RangeIndexer.h: factored the RangeIndexer class
	out of Vector, so that we can at a later time specialize it for character
	vectors, lists, etc ...

2010-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: add struct tm member variable and
	sensible (ie non-intra-day) accessor functions; add SEXP ctor
	* src/Date.cpp: Implementation of the above
	* inst/unitTests/runit.Date.R: tests for the above

	* inst/include/Rcpp/Datetime.h: New Datetime class
	* src/Datetime.cpp: Implementation for new Datetime class
	* inst/unitTests/runit.Datetime.R: first tests for Rcpp::Datetime
	* inst/include/Rcpp/Datetime_forward.h: API Integration

	* inst/include/Rcpp/DatetimeVector.h: New DatetimeVector class
	* src/Datetime.cpp: Implementation for new DatetimeVector class

2010-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Import mktime00() from R's src/main/datetime.c,
	  completed class implementation
	* inst/include/Rcpp/Date.h: Add mktime00() declaration

	* inst/include/Rcpp/DateVector.h: New DateVector class
	* src/Date.cpp: Implementation for new DateVector class

2010-06-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Date_forward.h: forward declaration of Rcpp::Date and
	support for wrap( container of Rcpp::Date ), e.g. wrap( vector<Date> )

	* inst/include/Rcpp/sugar/Range.h: added the concept of range to allow
	modification of several elements of a vector.

	* inst/examples/ConvolveBenchmarks: version of the convolution function
	using sugar indexing.

2010-06-22  Dirk Eddelbuettel  <edd@debian.org>
